--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 }
 html{
     font-size: 62.5%;
-    height: 100vh;
 }
 body{
     height: 100%;
@@ -13,20 +12,21 @@ body{
 }
 .question{
     display: flex;
-    height: 100vh;
+    height: 80vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 .container{
     display: flex;
+    align-items: center;
     margin: 10px;
     width: 50%;
     height: 50%;
     justify-content: center;
 }
 .container img{
-    width: 80%;
+    width: 90%;
     height: 80%;
 }
 .questions{
@@ -69,7 +69,6 @@ h1{
 h2{
     text-align: center;
     font-size: 2rem;
-    margin:10px
 }
 h3{
     font-size: 1.5rem;
