--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,7 @@ table {
       width: 100%;
       margin: 10px;
       justify-content: space-evenly;
+      text-align: center;
       font-size: 3rem;
   }
   .feedback__correctIndicators p {
